Fix footer alignment

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -25,7 +25,7 @@ footer {
     @include align-self(flex-end);
     li {
       display: inline;
-      margin: 0 1em;
+      margin: 0 0.5em;
     }
   }
 
